--- a/Comfizen/Views/UIConstructor.xaml
+++ b/Comfizen/Views/UIConstructor.xaml
@@ -261,10 +261,14 @@
                                 
                                 <DockPanel Grid.Row="4" Margin="0,10,0,0">
                                     <Grid DockPanel.Dock="Top" Margin="10,0,10,10">
-                                        <TextBox x:Name="SearchBox" Text="{Binding SearchFilter, UpdateSourceTrigger=PropertyChanged}" GotFocus="SearchBox_GotFocus"/>
-                                        <TextBlock Text="{local:Translate UIConstructor_SearchPlaceholder}" Foreground="{StaticResource TextSecondaryBrush}" Margin="8,0" IsHitTestVisible="False" VerticalAlignment="Center">
-                                            <TextBlock.Style><Style TargetType="TextBlock"><Setter Property="Visibility" Value="Collapsed"/><Style.Triggers><DataTrigger Binding="{Binding Text, ElementName=SearchBox}" Value=""><Setter Property="Visibility" Value="Visible"/></DataTrigger></Style.Triggers></Style></TextBlock.Style>
-                                        </TextBlock>
+                                        <Grid.ColumnDefinitions>
+                                            <ColumnDefinition Width="*"/>
+                                            <ColumnDefinition Width="Auto"/>
+                                        </Grid.ColumnDefinitions>
+                                        <TextBox Grid.Column="0" x:Name="SearchBox" Text="{Binding SearchFilter, UpdateSourceTrigger=PropertyChanged}" GotFocus="SearchBox_GotFocus"/>
+                                        <CheckBox Grid.Column="1" Content="{local:Translate UIConstructor_Field_UsePrefix}" ToolTip="{local:Translate UIConstructor_Field_UsePrefixTooltip}"
+                                                  IsChecked="{Binding UseNodeTitlePrefix, Mode=TwoWay}"
+                                                  VerticalAlignment="Center" Margin="10,0,0,0"/>
                                     </Grid>
                                     <TextBlock DockPanel.Dock="Top" Text="{local:Translate UIConstructor_AvailableFields}" FontWeight="Bold" Margin="10,5,10,5"/>
                                     <ListBox ItemsSource="{Binding AvailableFields}" Background="Transparent" BorderThickness="0" Margin="5"
